<resources>
    <string name="app_name">EntryEvent</string>
    <string name="app_title">Billetterie</string>
    <string name="check_title">Vérification des billets</string>
    <string name="scan_button">Scan QR code</string>
    <string name="connect_button">Connexion</string>
    <string name="event">No</string>
    <string name="check_event">Evènement:</string>
    <string name="event_name">No</string>
    <string name="open_id">OpenID</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="ticketId">Id du billet</string>
    <string name="validation">Validation</string>
    <string name="switch_btn">Entrée</string>
    <string name="list_btn">Participants</string>
    <string name="login_text">Login:</string>
    <string name="login_name">no</string>
    <string name="loading">loading</string>
    <string name="name">Nom:</string>
    <string name="btn_update">Mise à jour</string>
</resources>
