<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CheckActivity">

    <TextView
        android:id="@+id/event_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/check_event"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fontFamily="@font/raleway_extrabold"
        android:textColor="@color/colorDarkBlue"
        android:textSize="16dp"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guide10" />

    <TextView
        android:id="@+id/event_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/event_name"
        android:fontFamily="@font/raleway_light"
        android:textColor="@color/colorLightBlue"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/event_text"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guide10" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guide20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20"/>
    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guide40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40"/>
    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guide10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10"/>
    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guide80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80"/>

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guide10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10"/>
    <android.support.constraint.Guideline
        android:id="@+id/vertical_guide90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90"/>
    <android.support.constraint.Guideline
        android:id="@+id/vertical_guide20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.20"/>
    <android.support.constraint.Guideline
        android:id="@+id/vertical_guide80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.80"/>
    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guide60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60"/>
    <android.support.constraint.Guideline
        android:id="@+id/horizontal_guide70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70"/>


    <EditText
        android:id="@+id/ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:fontFamily="@font/raleway_regular"
        android:hint="@string/ticketId"
        android:lines="1"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_guide40" />

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/scan_button"
        android:background="@drawable/button_style"
        android:fontFamily="@font/raleway_regular"
        android:textColor="@color/colorBlank"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guide20"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_guide10"
        />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_update"
        android:background="@drawable/button_style"
        android:fontFamily="@font/raleway_regular"
        android:textColor="@color/colorBlank"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ticket"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/btn_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/list_btn"
        android:background="@drawable/button_style"
        android:fontFamily="@font/raleway_regular"
        android:textColor="@color/colorBlank"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_guide20"
        app:layout_constraintRight_toLeftOf="@+id/vertical_guide90"/>

    <Button
        android:id="@+id/btn_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/switch_btn"
        android:background="@drawable/button_style"
        android:fontFamily="@font/raleway_regular"
        android:textColor="@color/colorBlank"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_guide80"
        app:layout_constraintLeft_toLeftOf="@+id/vertical_guide10"/>

    <Button
        android:id="@+id/btn_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/validation"
        android:background="@drawable/button_style"
        android:fontFamily="@font/raleway_regular"
        android:textColor="@color/colorBlank"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guide80"
        app:layout_constraintRight_toLeftOf="@+id/vertical_guide90"/>

    <TextView
    android:id="@+id/login_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:text="@string/login_text"
    app:layout_constraintLeft_toLeftOf="parent"
    android:fontFamily="@font/raleway_extrabold"
    android:textColor="@color/colorDarkBlue"
    android:textSize="16dp"
    app:layout_constraintTop_toTopOf="@+id/horizontal_guide60" />

    <TextView
        android:id="@+id/login_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/login_name"
        android:fontFamily="@font/raleway_light"
        android:textColor="@color/colorLightBlue"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_text"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guide60" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        android:fontFamily="@font/raleway_extrabold"
        android:textColor="@color/colorDarkBlue"
        android:textSize="16dp"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guide70" />

    <TextView
        android:id="@+id/name_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/login_name"
        android:fontFamily="@font/raleway_light"
        android:textColor="@color/colorLightBlue"
        android:textSize="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_text"
        app:layout_constraintTop_toTopOf="@+id/horizontal_guide70" />

</android.support.constraint.ConstraintLayout>